# imc-prosperity-4

./: .gitignore  README.md  parse_308866.py  parse_best.py  parse_best_strat.py  pyproject.toml  regime_check.py  v10_round1_prosperity.py  v20_round1_prosperity.py  v35_round1_prosperity.py  v39_round1_prosperity.py  v3_round1_prosperity.py  v40_round1_prosperity.py  v44_round1_prosperity.py  v4_round1_prosperity.py  v7_round1_prosperity.py  v9_round1_prosperity.py
.osmium_mc_optimizer/: mc_strategy.py  temp_dashboard.json
.osmium_worker_pool/: walker.py  worker_0.py  worker_1.py  worker_2.py  worker_3.py  worker_4.py  worker_5.py  worker_6.py
124346/: 124346.json
124732/: 124732.json  124732.py
308866/: 308866.json  308866.py
MM_pepper/: 177657.json  177657.py
Phase_2/: strategy.py
best_strat/: 301979.json  301979.py
best_strat_logs/: 138421.json  138421.py  177226.json  177226.py
best_strat_vedant/: 310059.json  310059.py
hold_1_unit/: 296479.json
market_analysis/: analyze_depth.py  analyze_drift.py  analyze_historical_fv.py  extract_distributions.py
normal_quotes/: 297739.json
prosperity4bt/: __main__.py  data.py  file_reader.py  metrics.py  models.py  open.py  parse_submission_logs.py  runner.py
round2/: FINDINGS.md  analyze_penny_jumping.py  log_analysis.py  market_mc.py  optimize_allocation.py
snipe/: 298967.json
vedant/: advanced_eda.py  analyze_osmium.py  analyze_pepper_root.py  analyze_pepper_spreads.py  bot_check.py  buy_and_hold_pepper.py  grid_search_osmium.py  grid_search_pepper.py  hold_1_unit_osmium.py  optimize_osmium.py  (+10 more)
(+986 files in other folders)
