[project]
name = "prosperity4bt"
description = "Backtester for IMC Prosperity 4 algorithms"
version = "0.1.0"
readme = "README.md"
license = {text = "MIT"}
keywords = ["imc", "prosperity", "backtest", "backtester"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
prosperity4bt = "prosperity4bt.__main__:main"

[tool.setuptools.packages.find]
include = ["prosperity4bt", "prosperity4bt.*"]

[tool.setuptools.package-data]
prosperity4bt = ["resources/*/*.csv"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prosperity4bt.datamodel"
ignore_errors = true
